# blobert

./: .gitignore  Cargo.toml  README.md  localhost.crt  localhost_pri.key
src/: blob.rs  error.rs  lib.rs  main.rs  manifests.rs  store.rs  tls.rs  upload.rs  util.rs
src/meta/: fs.rs  manifest.rs  mod.rs
