[package]
name = "blobert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oci-distribution = "0.8.1"
actix-web = "4"
env_logger = "0.9.0"
futures = "0.3.21"
bytes = "1.1.0"
uuid = { version = "0.8", features = ["v4"] }
structopt = "0.3.26"
log = "0.4.14"
serde = "1.0.136"
