[package]
name = "blobert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oci-distribution = {version = "0.8.1", default-features = false, features = ["rustls-tls"]}
actix-web = {version="4", features = ["rustls"]}

#env_logger = "0.9.0"
futures = "0.3.21"
bytes = "1.1.0"
uuid = { version = "0.8", features = ["v4"] }
structopt = "0.3.26"
log = "0.4.14"
serde = "1.0.136"
serde_json = "1"
sha2 = "0.10.2"
byte-unit = "4.0.14"

rustls = "0.20.2"
rustls-pemfile = "0.3"

regex = "1.6.0"

custom-utils = "0.10.2"
anyhow = "1.0.58"


#[patch.crates-io]
#custom-utils = {path = "../custom-utils"}
